Fix build of own emoji functions

The UnicodeSet::applyPattern method accepts a UErrorCode&
reference. Adding an automatic conversion operator to
ICUError to fix the build when the built-in emoji functions
are used.

BUG=677658

Review-Url: https://codereview.chromium.org/2606183002
Cr-Commit-Position: refs/heads/master@{#441061}

Former-commit-id: 8d86b413cc000d9f411b9d27636b1435bd9cc0dd